--- a/exercicios/desafio/d012/estilo/style.css
+++ b/exercicios/desafio/d012/estilo/style.css
@@ -1,5 +1,16 @@
 @charset "UTF-8";
 
+@import url('https://fonts.googleapis.com/css2?family=Passion+One:wght@400;700;900&display=swap');
+
+@import url('https://fonts.googleapis.com/css2?family=Passion+One:wght@400;700;900&family=Sriracha&display=swap');
+
+:root {
+    --font1: Verdana, Geneva, Tahoma, sans-serif;
+    --font2: "Passion One", sans-serif;
+    --font3: "Sriracha", cursive;
+}
+        
+
 * {
     margin: 0px;
     padding: 0px;
@@ -8,6 +19,7 @@
 html, body {
     min-height: 100vh;
     background-color: darkgrey;
+    font-family: var(--font1);
 }
 
 header {
@@ -19,6 +31,8 @@ header {
 header > h1 {
     padding-top: 50px;
     font-variant: small-caps;
+    font-family: var(--font2);
+    font-size: 3.8em;
 }
 
 header > p {
@@ -30,6 +44,8 @@ section {
     padding-bottom: 10vh;
     line-height: 2em;
     padding-left: 30px;
+    font-family: var(--font3);
+    font-size: 3.5vw;
 }
 
 section.normal {
@@ -43,8 +59,9 @@ section.imagem {
 }
 
 section.imagem > p {
+    display: inline-block;
+    padding: 10px;
     background-color: rgba(0, 0, 0, 0.336);
-    width: 400px;
 }
 
 a {
